# ryu

./: .bazelrc  .bazelrc.windows  .classpath  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS  README.md  lake-manifest.json  lakefile.toml  meson.build  run_benchmark.bat  run_benchmark_linux.sh
.github/workflows/: presubmit.yml
lean/Ryu/: Basic.lean  Test-Float16.lean  Test-Mathlib.lean
lean/Ryu/IEEE754/: Float.lean
ryu/: BUILD  Makefile  common.h  config.h  d2exp10.c  d2fixed.c  d2fixed_full_table.h  d2parts.c  d2s.c  d2s.h  d2s_full_table.h  d2s_intrinsics.h  d2s_small_table.h  digit_table.h  dtable.h  f2exp10.c  f2parts.c  f2s.c  f2s_intrinsics.h  generic_128.c  generic_128.h  meson.build  mulshift128.h  ryu.h  ryu.hpp  ryu2.h  ryu2.hpp  ryu2_header_only.hpp  ryu_generic_128.h  ryu_generic_128.hpp  ryu_generic_128_header_only.hpp  ryu_header_only.hpp  ryu_low_level.h  ryu_parse.h  s2d.c  s2f.c  to_decimal.h
ryu/benchmark/: BUILD  benchmark.cc  benchmark_fixed.c  benchmark_fixed.cc
ryu/man/: ryu.3  ryu_generic_128.3  ryu_parse.3
ryu/tests/: BUILD  bounds.c  common_test.cc  d2fixed_test.cc  d2s_intrinsics_test.cc  d2s_table_test.cc  d2s_test.cc  f2s_test.cc  generic_128_test.cc  meson.build  s2d_test.cc  s2f_test.cc
scripts/: BUILD  double.template  float.template  gnuplot.template  printf.template
src/main/java/info/adams/ryu/: BUILD  RoundingMode.java  RyuDouble.java  RyuFloat.java
src/main/java/info/adams/ryu/analysis/: BUILD  ComputeRequiredBitSizes.java  ComputeTableSizes.java  EuclidMinMax.java  ExhaustiveFloatComparison.java  ExhaustiveFloatComparisonMain.java  ExtensiveDoubleComparison.java  ExtensiveDoubleComparisonMain.java  FindDifferences.java  FloatingPointFormat.java  PrintDoubleLookupTable.java  PrintFloatLookupTable.java  PrintGenericLookupTable.java  RandomizedDoubleComparison.java  SlowConversion.java  TableSizesMain.java
src/main/java/info/adams/ryu/benchmark/: BUILD  BenchmarkMain.java  MeanAndVariance.java
src/main/java/info/adams/ryu/printf/: PrintPrintfLookupTable.java
src/test/java/info/adams/ryu/: AllTests.java  BUILD  DoubleToStringTest.java  EuclidMinMaxTest.java  FloatToStringTest.java  JafferDoubleTest.java  RyuDoubleTest.java  RyuFloatTest.java  SlowDoubleTest.java  SlowFloatTest.java
